syntax = "proto3";

package blog;

option go_package = "github.com/dailoi280702/se121/blog-service/pkg/blog";

message Blog {
  int id = 1;
  string title = 2;
  string body = 3;
  optional string image_url = 4;
  int author = 5;
  optional string tldr = 6;
  // timestamp converted to unix time (milisecond)
  int64 createdAt = 7;
  optional int64 updatedAt = 8;
}

message BlogOverViews {
  int id = 1;
  string title = 2;
  optional string image_url = 4;
  int author = 5;
  string tldr = 6;
  int64 createdAt = 7;
}

message Tag {
  int id = 1;
  string name = 2;
  optional string description = 3;
  int64 createdAt = 4;
  optional int64 updatedAt = 5;
}

service BlogService {
  rpc CreateBlog(CreateBlogReq) returns (Empty);
  rpc GetBlog(GetBlogReq) returns (Blog);
  rpc UpdateBlog(UpdateBlogReq) returns (Empty);
  rpc DeleteBlog(DeleteBlogReq) returns (Empty);
  rpc SearchForBlogs(SearchForBlogsReq) returns (stream BlogOverViews);
  rpc GetNumberOfBlogs(Empty) returns (GetNumberOfBlogsRes);

  // :TODO add method for tags
}

message Empty {}

message CreateBlogReq {
  string title = 1;
  string body = 2;
  optional string image_url = 3;
  int author = 4;
  optional string tldr = 5;
  optional int64 createdAt = 6;
}

message GetBlogReq {
  int id = 1;
}

message DeleteBlogReq {
  int id = 1;
}

message UpdateBlogReq {
  int id = 1;
  optional string title = 2;
  optional string body = 3;
  optional string image_url = 4;
  optional string tldr = 6;
  optional int64 updatedAt = 8;
}

message SearchForBlogsReq {
  string text = 1;
  string orderby = 2;
  int32 startAt = 3;
  int32 limit = 4;
}

message GetNumberOfBlogsRes {
  int GetNumberOfBlogs = 1;
}
